Improving grid projection.